--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 body {
-  margin: 0;
+  height: 100%;
+  background-color: #3C013D;
+}
+
+body {
+  margin: auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
