--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,500;0,600;0,700;1,500&display=swap');
 
 .App {
-    padding: 60px 40px 60px 40px;
-    margin: auto;
     max-width: 700px;
+    margin: auto;
+    padding: 60px 40px 60px 40px;
+}
+
+.Contact {
+    max-width: 1200px;
+    margin: auto;
+    padding: 60px 40px 60px 40px;
 }
 
 .Header{
@@ -17,16 +23,24 @@ h1 {
     font-size: 25px;
     margin-bottom: 20px;
     margin-top: 20px;
+    color: white;
 }
 
 .Button {
     display: flex;
     align-items: center;
-    background-color: white;
+    background-color: black;
     justify-content: center;
     margin: 30px 0 30px 0;
     height: 60px;
     border-radius: 50px;
+    border: 5px solid white;
+    text-decoration: none;
+    transition: all .2s ease-in-out;
+}
+
+.Button:hover {
+    transform: scale(1.05);
 }
 
 .Button_text {
@@ -34,6 +48,7 @@ h1 {
     margin-left: 15px;
     font-family: "Roboto Mono";
     font-weight: 500;
+    color: white;
 }
 
 .Profile {
@@ -45,3 +60,34 @@ h1 {
     height: 40px;
 }
 
+a:hover {
+    color: purple;
+}
+
+@media (min-width: 600px) {
+    h1 {
+        font-size: 40px;
+    }
+
+    h3 {
+        font-size: 30px;
+    }
+
+    .Button {
+        height: 80px;
+    }
+
+    .Icon {
+        height: 50px;
+    }
+
+    .Button_text {
+        font-size: 25px;
+    }
+
+    .Profile {
+        height: 300px;
+        border-radius: 150px;
+    }
+  }
+  
