--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,500;0,600;0,700;1,500&display=swap');
 
 .App {
-    max-width: 700px;
-    margin: auto;
-    padding: 60px 40px 60px 40px;
-}
-
-.Contact {
     max-width: 1200px;
     margin: auto;
-    padding: 60px 40px 60px 40px;
+    padding: 80px 50px 80px 50px;
 }
+
 
 .Header{
     color: white;
@@ -31,10 +26,10 @@ h1 {
     align-items: center;
     background-color: black;
     justify-content: center;
-    margin: 30px 0 30px 0;
-    height: 60px;
+    margin: 20px 0 20px 0;
+    height: 50px;
     border-radius: 50px;
-    border: 5px solid white;
+    border: 3px solid white;
     text-decoration: none;
     transition: all .2s ease-in-out;
 }
@@ -44,7 +39,7 @@ h1 {
 }
 
 .Button_text {
-    font-size: 20px;
+    font-size: 15px;
     margin-left: 15px;
     font-family: "Roboto Mono";
     font-weight: 500;
@@ -52,12 +47,12 @@ h1 {
 }
 
 .Profile {
-    height: 200px;
+    height: 150px;
     border-radius: 125px;
 }
 
 .Icon {
-    height: 40px;
+    height: 30px;
 }
 
 a:hover {
@@ -66,28 +61,32 @@ a:hover {
 
 @media (min-width: 600px) {
     h1 {
-        font-size: 40px;
+        font-size: 35px;
     }
 
     h3 {
-        font-size: 30px;
-    }
-
-    .Button {
-        height: 80px;
-    }
-
-    .Icon {
-        height: 50px;
-    }
-
-    .Button_text {
         font-size: 25px;
     }
 
+    .Button {
+        height: 60px;
+    }
+  
+    .Button_Container {
+        margin: auto;
+        max-width: 700px;
+    }
+
+    .Button_text {
+        font-size: 20px;
+    }
+
+    .Icon {
+        height: 45px;
+    }
+
     .Profile {
-        height: 300px;
-        border-radius: 150px;
+        height: 200px;
     }
   }
   
