--- a/src/style.css
+++ b/src/style.css
@@ -13,11 +13,26 @@
     margin-bottom: 70px;
 }
 
+h1, h2, h3, p {
+    color: white;
+}
+
 h1 {
     font-size: 25px;
     margin-bottom: 20px;
     margin-top: 20px;
-    color: white;
+}
+
+h2 {
+    font-size: 25px;
+}
+
+h3 {
+    font-size: 20px;
+}
+
+p {
+    font-size: 15px;
 }
 
 .logo {
@@ -132,36 +147,21 @@ a {
 }
 
 @media screen and (min-width: 768px) {
-    .nav__toggler {
-        display: none;
-    }
 
-    .nav__list {
-        width: auto;
-        display: flex;
-        opacity: 1;
-        max-height: 100%;
-        justify-content: space-between;
-    }
-
-    .nav__item {
-        border: 0;
-        padding: 20px;
-    }
-
-    .nav__item > a {
-        font-size: 20px;
-    }
-}
-
-
-@media (min-width: 600px) {
     h1 {
         font-size: 35px;
     }
 
+    h2 {
+        font-size: 30px;
+    }
+
     h3 {
         font-size: 25px;
+    }
+
+    p {
+        font-size: 20px;
     }
 
     .Button {
@@ -184,5 +184,26 @@ a {
     .Profile {
         height: 200px;
     }
-  }
-  
+
+    .nav__toggler {
+        display: none;
+    }
+
+    .nav__list {
+        width: auto;
+        display: flex;
+        opacity: 1;
+        max-height: 100%;
+        justify-content: space-between;
+    }
+
+    .nav__item {
+        border: 0;
+        padding: 20px;
+    }
+
+    .nav__item > a {
+        font-size: 20px;
+    }
+}
+
