--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@
 
 h1, h2, h3, p {
     color: white;
+    margin-left: 10px;
 }
 
 h1 {
@@ -24,15 +25,15 @@ h1 {
 }
 
 h2 {
-    font-size: 25px;
-}
-
-h3 {
     font-size: 20px;
 }
 
-p {
+h3 {
     font-size: 15px;
+}
+
+p {
+    font-size: 1rem;
 }
 
 .logo {
@@ -92,20 +93,15 @@ a {
 
 .Card {
     padding: 0 30px;
-    margin: 40px 0;
     text-align: center;
-}
-
-.Card__header {
-    margin: 30px 0;
 }
 
 .Card__content {
 
 }
 
-.card__image {
-    height: 200px;
+.Card__image {
+    height: 150px;
 }
 
 .collapsible__content {
@@ -164,6 +160,22 @@ a {
     color: dodgerblue;
 }
 
+.About__section {
+    padding: 0 30px;
+    margin-bottom: 50px;
+}
+
+.Skills__section {
+    padding: 0 30px;
+}
+
+.Skills__container {
+    display: grid;
+    row-gap: 20px;
+    flex-direction: column;
+}
+
+
 @media screen and (min-width: 768px) {
 
     h1 {
@@ -203,10 +215,6 @@ a {
         height: 200px;
     }
 
-    .Card__image {
-        height: 250px;
-    }
-
     .nav__toggler {
         display: none;
     }
@@ -227,5 +235,41 @@ a {
     .nav__item > a {
         font-size: 20px;
     }
+
+    .Card {
+        display: flex;
+        padding: 0;
+    }
+
+    .Card__header {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .Card__content {
+        text-align: left;
+        padding-left: 30px;
+        padding-top: 20px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+
+    .Card {
+        display: block;
+    }
+
+    .Card__header {
+        display: block;
+    }
+
+    .Skills__container {
+        display: flex;
+        flex-direction: row;
+        column-gap: 20px;
+    }
+
+
 }
 
