--- a/src/style.css
+++ b/src/style.css
@@ -114,6 +114,7 @@ li {
     border: 3px solid white;
     border-radius: 20px;
     padding: 10px;
+    max-width: fit-content;
 }
 
 .Collapsible__heading {
